Project

General

Profile

Actions

Bug #38123

closed

Bug #38094: mgr: crash list

mgr: segfault, dashboard, PyEval_EvalFrameEx()

Added by Ernesto Puerta about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Regular vstart. CentOS7 container. master (a9dfd7067f)

   -12> 2019-01-31 11:12:28.033 7f17e4de4700 20 mgr ~Gil Destroying new thread state 0x56321977e840  
   -11> 2019-01-31 11:12:28.033 7f17d166b700 20 mgr[dashboard] NQ: processing queue: 1               
   -10> 2019-01-31 11:12:28.983 7f17d4e72700 20 mgr[dashboard] [::ffff:172.20.0.2:59668] [GET] [admin] /api/health/minimal
    -9> 2019-01-31 11:12:28.983 7f17d4e72700  4 mgr get_config get_config key: mgr/dashboard/AUDIT_API_ENABLED
    -8> 2019-01-31 11:12:28.983 7f17d4e72700  4 mgr get_typed_config get_typed_config AUDIT_API_ENABLED not found 
    -7> 2019-01-31 11:12:28.983 7f17d4e72700 20 mgr[dashboard] AMT: token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJjZXBoLWRhc2hib2FyZC
    -6> 2019-01-31 11:12:28.984 7f17d4e72700  4 mgr get_store get_store key: mgr/dashboard/jwt_token_black_list
    -5> 2019-01-31 11:12:28.984 7f17d4e72700 10 ceph_store_get jwt_token_black_list found: {"811daf41-ac2b-4651-8444-d957154b5778": 1548961413
    -4> 2019-01-31 11:12:28.984 7f17d4e72700 20 mgr[dashboard] AMT: checking authorization...        
    -3> 2019-01-31 11:12:28.999 7f17d4e72700 10 mgr list_servers_python  >                           
    -2> 2019-01-31 11:12:28.999 7f17d4e72700 10 mgr list_servers_python  >                           
    -1> 2019-01-31 11:12:29.000 7f17d4e72700 10 mgr list_servers_python  >                           
     0> 2019-01-31 11:12:29.007 7f17d4e72700 -1 *** Caught signal (Segmentation fault) **            
 in thread 7f17d4e72700 thread_name:dashboard                                                        

 ceph version Development (no_version) nautilus (dev)                                                
 1: (()+0x93c92a) [0x563213b4592a]                                                                   
 2: (()+0xf5d0) [0x7f18005e55d0]                                                                     
 3: (()+0x7401b) [0x7f180298201b]                                                                    
 4: (PyEval_EvalFrameEx()+0x1d41) [0x7f18029edc41]                                                   
 5: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                     
 6: (PyEval_EvalFrameEx()+0x663c) [0x7f18029f253c]                                                   
 7: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                     
 8: (PyEval_EvalFrameEx()+0x663c) [0x7f18029f253c]                                                   
 9: (PyEval_EvalFrameEx()+0x67bd) [0x7f18029f26bd]                                                   
 10: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 11: (PyEval_EvalFrameEx()+0x663c) [0x7f18029f253c]                                                  
 12: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 13: (PyEval_EvalFrameEx()+0x663c) [0x7f18029f253c]                                                  
 14: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                        
 15: (()+0x70a6d) [0x7f180297ea6d]                                                                   
 16: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 17: (()+0x5aa55) [0x7f1802968a55]                                                                   
 18: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 19: (PyEval_EvalFrameEx()+0x17fd) [0x7f18029ed6fd]                                                  
 20: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 21: (()+0x70a6d) [0x7f180297ea6d]                                                                   
 22: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 23: (PyEval_EvalFrameEx()+0x17fd) [0x7f18029ed6fd]                                                  
 24: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 25: (()+0x70a6d) [0x7f180297ea6d]                                                                   
 26: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 27: (()+0x5aa55) [0x7f1802968a55]                                                                   
 28: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 29: (()+0xa2e27) [0x7f18029b0e27]                                                                   
 30: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 31: (PyEval_EvalFrameEx()+0x17fd) [0x7f18029ed6fd]                                                  
 32: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 33: (()+0x70a6d) [0x7f180297ea6d]                                                                   
 34: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 35: (PyEval_EvalFrameEx()+0x17fd) [0x7f18029ed6fd]                                                  
 36: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 37: (()+0x70a6d) [0x7f180297ea6d]                                                                   
 38: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 39: (PyEval_EvalFrameEx()+0x17fd) [0x7f18029ed6fd]                                                  
 40: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 41: (()+0x70978) [0x7f180297e978]                                                                   
 42: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 43: (()+0x5aa55) [0x7f1802968a55]                                                                   
 44: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 45: (()+0x56df8) [0x7f1802964df8]                                                                   
 46: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 47: (PyEval_EvalFrameEx()+0x2336) [0x7f18029ee236]                                                  
 48: (PyEval_EvalFrameEx()+0x67bd) [0x7f18029f26bd]                                                  
 49: (PyEval_EvalFrameEx()+0x67bd) [0x7f18029f26bd]                                                  
 50: (PyEval_EvalFrameEx()+0x67bd) [0x7f18029f26bd]                                                  
 51: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 52: (()+0x70978) [0x7f180297e978]                                                                   
 53: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 54: (()+0x5aa55) [0x7f1802968a55]                                     
 54: (()+0x5aa55) [0x7f1802968a55]                                                                   
 55: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 56: (()+0xa2a87) [0x7f18029b0a87]                                                                   
 57: (()+0xa179f) [0x7f18029af79f]                                                                   
 58: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 59: (PyEval_EvalFrameEx()+0x2336) [0x7f18029ee236]                                                  
 60: (PyEval_EvalFrameEx()+0x67bd) [0x7f18029f26bd]                                                  
 61: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 62: (()+0x70a6d) [0x7f180297ea6d]                                                                   
 63: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 64: (()+0x5aa55) [0x7f1802968a55]                                                                   
 65: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 66: (()+0xa2e27) [0x7f18029b0e27]                                                                   
 67: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 68: (PyEval_EvalFrameEx()+0x17fd) [0x7f18029ed6fd]                                                  
 69: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 70: (PyEval_EvalFrameEx()+0x663c) [0x7f18029f253c]                                                  
 71: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 72: (()+0x70978) [0x7f180297e978]                                                                   
 73: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 74: (()+0x5aa55) [0x7f1802968a55]                                                                   
 75: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 76: (()+0xa2a87) [0x7f18029b0a87]                                                                   
 77: (()+0xa179f) [0x7f18029af79f]                                                                   
 78: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 79: (PyEval_EvalFrameEx()+0x2336) [0x7f18029ee236]                                                  
 80: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 81: (()+0x70978) [0x7f180297e978]                                                                   
 82: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 83: (()+0x5aa55) [0x7f1802968a55]                                                                   
 84: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 85: (()+0xa2e27) [0x7f18029b0e27]                                                                   
 86: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 87: (PyEval_EvalFrameEx()+0x2336) [0x7f18029ee236]                                                  
 88: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 89: (()+0x70978) [0x7f180297e978]                                                                   
 90: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 91: (()+0x5aa55) [0x7f1802968a55]                                                                   
 92: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 93: (()+0xa2e27) [0x7f18029b0e27]                                                                   
 94: (PyObject_Call()+0x43) [0x7f1802959a63]             
 95: (PyEval_EvalFrameEx()+0x2336) [0x7f18029ee236]                                                  
 96: (PyEval_EvalCodeEx()+0x7ed) [0x7f18029f503d]                                                    
 97: (()+0x70978) [0x7f180297e978]                                                                   
 98: (PyObject_Call()+0x43) [0x7f1802959a63]                                                         
 99: (()+0x5aa55) [0x7f1802968a55]                                                                   
 NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.         

Actions #1

Updated by Ernesto Puerta about 5 years ago

  • Subject changed from mgr: segmentation fault, thread_name:dashboard, PyEval_EvalFrameEx() to mgr: segfault, thread_name:dashboard, PyEval_EvalFrameEx()
Actions #2

Updated by Ernesto Puerta about 5 years ago

  • Subject changed from mgr: segfault, thread_name:dashboard, PyEval_EvalFrameEx() to mgr: segfault, dashboard, PyEval_EvalFrameEx()
Actions #3

Updated by Ernesto Puerta about 5 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Sage Weil about 5 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF